fix: increase gap between markers and overlays

--- a/source/sass/options.scss
+++ b/source/sass/options.scss
@@ -16,7 +16,7 @@
     flex-direction: column;
     justify-content: space-between;
     border: 1px solid #2271b1;
-    gap: 1rem;
+    gap: 2rem;
     border-radius: .5rem;
     flex: 1 0 18rem;
 
